--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-   "proxy": "http://localhost:8080",
+   "proxy": "http://ec2-3-110-45-95.ap-south-1.compute.amazonaws.com:8080/",
   "eslintConfig": {
     "extends": [
       "react-app",
